# Postopenman

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: export.rs  folder.rs  http.rs  mod.rs  request.rs  workspace.rs
src-tauri/src/models/: folder.rs  mod.rs  request.rs
src/lib/api/: tauri.ts
src/lib/components/Request/: AuthEditor.svelte  BodyEditor.svelte  HeadersEditor.svelte  ParamsEditor.svelte  RequestPanel.svelte  RequestTabs.svelte  ResponsePanel.svelte  UrlBar.svelte
src/lib/components/Sidebar/: FolderTree.svelte  Sidebar.svelte  TreeItem.svelte  WorkspaceList.svelte
src/lib/components/shared/: ContextMenu.svelte  JsonHighlight.svelte  KeyValueEditor.svelte
src/lib/stores/: activeRequest.svelte.ts  workspaces.svelte.ts
src/lib/theme/: dracula.css
